Prepare for stable release 1.0.1

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "description": "Track your website viewers behavior and get your user analytics but only if they consent to!. Stay GDPR compliant when your website is scanned by any Cookie or GDPR Scanner, when using Google Analytics.",
   "authors": [],
   "license": "GPL-2.0-or-later",
+  "version": "1.0.1",
   "require": {
     "typo3/cms-core": "^11.5 || ^12.4"
   },
